Allen/k8slearn/istio/labs/03-https-gateway/istio-specs.yaml
# HTTPS Gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - httpsserver.cncamp.io
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cncamp-credential
---
# VirtualService
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
  - httpsserver
  hosts:
  - httpsserver.cncamp.io
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: httpserver.securesvc.svc.cluster.local
        port:
          number: 80
